[package]
name = "salvo-session"
version.workspace = true
edition.workspace = true
license = "MIT"

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
# [package.metadata.wasm-pack.profile.release]
# wasm-opt = false

# [lib]
# crate-type = ["cdylib"]

[lints]
workspace = true

[features]
full = []

[dependencies]
async-session = { workspace = true }
# getrandom = { version = "0.2.16", features = ["js"] } # ! async-session 间接使用了
getrandom_v2 = { package = "getrandom", version = "0.2.16", features = ["js"] }
cookie = { workspace = true, features = ["percent-encode", "signed"] }
salvo-core = { workspace = true, features = ["cookie"] }
tracing = { workspace = true }
time = { workspace = true }

worker = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
